# rescue_quadrotor

./: README.md
pal_person_detector_opencv/launch/: detector.launch
quadrotor_control/: pcontroller.py  rescue_flight.launch
quadrotor_control/launch/: rescue_flight.launch
quadrotor_description_rescue/: CMakeLists.txt  package.xml
quadrotor_description_rescue/urdf/: quadrotor_with_cam.gazebo.xacro  quadrotor_with_cam.urdf.xacro
quadrotor_gazebo/: CMakeLists.txt  package.xml
quadrotor_gazebo/launch/: rescue_flight.launch
quadrotor_gazebo/worlds/: rescue.world  rescue_old.world
quadrotor_world/: CMakeLists.txt  package.xml
